Added lists to sidebar, current date, and todo list concept

--- a/index.html
+++ b/index.html
@@ -17,11 +17,35 @@
 
     <div class="main-content">
       <div class="sidebar">
-        <h2>Sidebar</h2>
+        <button class="sidebar-button">Add List</button>
+        <div class="sidebar-lists"></div>
+      </div>
+
+      <div class="to-do-list">
+        <div class="date">
+          <p></p>
+          <hr>
+        </div>
+
+        <ul class="list">
+          <li>
+            <input type="checkbox" id="item1" name="item1">
+            <label for="item1">Task 1</label>
+          </li>
+          <li>
+            <input type="checkbox" id="item2" name="item2">
+            <label for="item2">Task 2</label>
+          </li>
+          <li>
+            <input type="checkbox" id="item3" name="item3">
+            <label for="item3">Task 3</label>
+          </li>
+        </ul>
+
       </div>
 
     </div>
   
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
