--- a/index.html
+++ b/index.html
@@ -39,14 +39,17 @@
         <li>
           <input type="checkbox" id="item1" name="item1">
           <label for="item1">Task 1</label>
+          <button class="delete-task-btn">Delete</button>
         </li>
         <li>
           <input type="checkbox" id="item2" name="item2">
           <label for="item2">Task 2</label>
+          <button class="delete-task-btn">Delete</button>
         </li>
         <li>
           <input type="checkbox" id="item3" name="item3">
           <label for="item3">Task 3</label>
+          <button class="delete-task-btn">Delete</button>
         </li>
       </ul>
 
