--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
           <button type="submit">Add Task</button>
         </form>
       </div>
+
+      <div class="sorting-controls">
+        <button id="sort-name" class="sort-button" data-sort="name-asc">ABCD &#8593;</button>
+        <button id="sort-date" class="sort-button" data-sort="date-asc">DATE &#8593;</button>
+      </div>
+
       <ul class="list">
         <li>
           <input type="checkbox" id="item1" name="item1">
