added date sort functionality on tasks & updated sort buttons UI

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ToDo</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="css/global.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -37,8 +38,8 @@
       </div>
 
       <div class="sorting-controls">
-        <button id="sort-name" class="sort-button" data-sort="name-asc">ABCD &#8593;</button>
-        <button id="sort-date" class="sort-button" data-sort="date-asc">DATE &#8593;</button>
+        <button id="sort-name" class="sort-button" data-sort="name-asc"><i class="fa fa-sort-alpha-down"></i></button>
+        <button id="sort-date" class="sort-button" data-sort="date-asc"><i class="fa fa-sort-numeric-down"></i></button>
       </div>
 
       <ul class="list">
