Fixed CSS on add list popup. Fixed Edit and Delete buttons not adding when adding a new list.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
       <button class="listclose-modal">Close</button>
     </div>
-
+  </dialog>
   <script src="js/script.js"></script>
 </body>
 
