modularized javascript files so its not one big script

--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
   </div>
 
   <dialog class="modal">
-      <div class="modal-content">
-        <div class="task-entry">
-          <form id="new-task-form" class="form-inline">
-            <input type="text" id="new-task-input" placeholder="Add a new task" required>
-            <button type="submit" class="btn-add-task">Add Task</button>
-          </form>
+    <div class="modal-content">
+      <div class="task-entry">
+        <form id="new-task-form" class="form-inline">
+          <input type="text" id="new-task-input" placeholder="Add a new task" required>
+          <button type="submit" class="btn-add-task">Add Task</button>
+        </form>
 
-        </div>
-        <button class="close-modal">Close</button>
       </div>
+      <button class="close-modal">Close</button>
+    </div>
   </dialog>
 
   <dialog class="list-modal">
@@ -100,7 +100,7 @@
       <button class="listclose-modal">Close</button>
     </div>
   </dialog>
-  <script src="js/script.js"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 
 </html>
