Sorting buttons in sidebar now has their arrows change upon click.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
   <div class="main-content">
     <div class="sidebar">
       <button class="sidebar-button listopen-modal">Add List</button>
-      <br><button id="sort-list-date" class="sidebar-button sort-button" data-sort="list-date-asc">
-        <i class="fa fa-sort-numeric-down"></i></button>
-      <br><button id="sort-list-name" class="sidebar-button sort-button" data-sort="list-name-asc">
+      <br><button id="sort-list-date" class="date-button sort-button" data-sort="list-date-asc">
+        <i class="fa fa-sort-numeric-down"></i>
+      </button>
+      <br><button id="sort-list-name" class="date-button sort-button" data-sort="list-name-asc">
         <i class="fa fa-sort-alpha-down"></i>
       </button>
       <div class="sidebar-lists"></div>
