removed UI sort buttons & added default list selection

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <div class="main-content">
     <div class="sidebar">
       <button class="sidebar-button listopen-modal">Add List</button>
-      <br><button id="sort-list-date" class="date-button sort-button" data-sort="list-date-asc">
+      <!-- <br><button id="sort-list-date" class="date-button sort-button" data-sort="list-date-asc">
         <i class="fa fa-sort-numeric-down"></i>
       </button>
       <br><button id="sort-list-name" class="date-button sort-button" data-sort="list-name-asc">
         <i class="fa fa-sort-alpha-down"></i>
-      </button>
+      </button> -->
       <div class="sidebar-lists"></div>
     </div>
 
@@ -37,13 +37,13 @@
 
           <div class="date-button-container">
 
-            <button id="sort-name" class="date-button sort-button" data-sort="name-asc">
+            <!-- <button id="sort-name" class="date-button sort-button" data-sort="name-asc">
               <i class="fa fa-sort-alpha-down"></i>
             </button>
 
             <button id="sort-date" class="date-button sort-button" data-sort="date-asc">
               <i class="fa fa-sort-numeric-down"></i>
-            </button>
+            </button> -->
 
             <button class="date-button open-modal">
               <img src="./images/add.png" alt="+">
